# ASC-bla_group

./: .gitmodules  CMakeLists.txt
ASCsoft/: __init__.py
_skbuild/linux-x86_64-3.10/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  cmake_install.cmake  install_manifest.txt  test_lapack  test_matrix  test_vector
_skbuild/linux-x86_64-3.10/cmake-install/ASCsoft/: __init__.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
py_tests/: test_matrix.py  test_vector.py
src/: Matrix-Neu-Expression.h  Matrix-Neu-using_expressions.h  bind_bla.cpp  expression.h  lapack_interface.h  mat_vec_decl.h  matexpression.h  matrix by felix.h  matrix-old-D.h  matrix.h  matrix_old.h  matrix_old_with_enum.h  taskmanager.cc  timer.cc  vector.h
tests/: CMakeLists.txt  test_lapack.cc  test_matrix.cc
